# audio

./: .buildpacks  .env  .gitignore  Cargo.toml  Dockerfile  Pipfile  Procfile  README.md  Rocket.toml  apt-packages  audio.py  compose.yaml  fUsersmaxwiProgrammeringsProjektaudiosongsJSONsongs.json  main.rs  package-lock.json  package.json  requirements.txt  songFormatter.py  songs.json  songs.py  sqlx-data.json  tailwind.config.js  texlive.packages
js/: main.jsx  styles.js
jsongs/: 1_2_45.json  __META__.json  agdas_skal.json  an_en_gang_daran.json  anders_the_president.json  angbaten.json  anglapunsch.json  anti-snapsvisa.json  arkitektvisan.json  arskursvisan.json  avslag_pa_csn.json  balladen_om_arkitektens_kak.json  bergsman_vi_aro.json  berkeley_california.json  betlehems_stjarna.json  blaa_ringar.json  bordeaux_bordeaux.json  borsras.json  bort_allt_vad_oro_gor.json  bredbandshymn.json  brev_fran_campus.json  brev_fran_kongligen.json  bruces_philosophers_song.json  byggingenjorernas_bekannelse.json  can_can.json  cecilia_lind.json  cls_visa.json  d_sektionen_lth.json  daddans_sang.json  daddekram.json  dadderiets_klemarvisa.json  daddornas_introduktion.json  dance_macabre.json  dataeliten.json  datalogen.json  datalogik.json  datas_bordsvisa.json  datas_visa.json  den_blomstertid_nu_kommer.json  den_digitala_snapsvisan.json  (+213 more)
migrations/: 20230402161803_create_songs_table.sql  20230402161803_create_songs_table.sql~  20230525143316_make_meta_optional.sql
public/: browserconfig.xml  favico.psd  index.html  manifest.json
songs/: HjalteForEnDag.tex  daddekram.tex  (+18 more)
(+26 files in other folders)
